Fixed z-index on bouncing arrow

--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,7 @@ footer p {
 	border-width: 30px 30px 0 30px;
 	border-color: #ffffff transparent transparent transparent;
 	margin-bottom: 20px;
+  z-index: 1;
 }
 
 #home-circle a {
